--- a/views/index.html
+++ b/views/index.html
@@ -9,21 +9,22 @@
     </head>
     <body>
 
-        <div class="calculator">
-            <form method="post" action="" class="calc-form">
-                <h1>Enter the amount</h1>
-                <label for="calc_this">Value in 
-                    <!-- Rectangular switch -->
-                <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider"></span>
-                </label>
-                </label>
-                <input name="calc_this" type="number" value=1>
-                <button type="submit">Convert Currency</button>
-            </form>
-            <div class="result"><%= result %> </div>
-        </div>
+            <div class="calculator">
+                    <form method="post" action="" class="calc-form">
+                        <h1>Enter the amount</h1>
+                        <label for="number">Value in 
+                            <!-- Rectangular switch -->
+                        <label class="switch">
+                            <input name="direction" type="checkbox">
+                            <span class="slider"></span>
+                        </label>
+                        </label>
+                        <input name="number" type="number" value=1>
+                        <button type="submit">Convert Currency</button>
+                    </form>
+                    <div class="result"><%= currency + " " + result %> </div>
+                        <a href="/clear"><button type="button" class="clear-button">Clear Form</button></a>
+                </div>
             
     </body>
 </html>
