added clear button, currency display

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
         <div class="calculator">
-            <form method="post" action="" class="calc-form">
+            <form method="post" action="/convert" class="calc-form">
                 <h1>Enter the amount</h1>
                 <label for="number">Value in 
                     <!-- Rectangular switch -->
