after converting, the currency swith jumped back to dollar - fixed, now it stays at the last position

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
                     <!-- Rectangular switch -->
                 <label class="switch">
                     <input name="direction" type="checkbox"
-                        <% if (currency == '€') { %>
+                        <% if (currency && currency == "$") { %>
                             <%= `checked="checked"` %>
                         <% } %> 
                     >
